--- a/grid.html
+++ b/grid.html
@@ -18,8 +18,19 @@
         <div class="six">6</div>
         <!-- <div>7</div>
         <div>8</div>
-        <div>9</div> -->
-
+        <div>9</div> -->       
+        <div class="nestHeading"><h2>New Div Group</h2></div>
+        <div class="seven">7</div>
+        <div class="eight">8</div>
+        <div class="nine">9</div>
+        <div class="nestedGrid">
+            <p>1</p>
+            <p>2</p>
+            <p>3</p>
+            <p>4</p>
+        </div>
+        <div class="eleven">11</div>
+        <div class="twelve">12</div>
 
     </div>
 </body>
