--- a/grid.html
+++ b/grid.html
@@ -31,7 +31,15 @@
         </div>
         <div class="eleven">11</div>
         <div class="twelve">12</div>
-
+    </div>
+    <span>Aligning & Justifying</span>
+    <div class="content2">
+        <div class="ct-one">1</div>
+        <div class="ct-two">2</div>
+        <div class="ct-three">3</div>
+        <div class="ct-four">4</div>
+        <div class="ct-five">5</div>
+        <div class="ct-six">6</div>
     </div>
 </body>
 </html>
