added color picker

--- a/mosaic-layout/mosaic-layout.html
+++ b/mosaic-layout/mosaic-layout.html
@@ -10,13 +10,29 @@
 <body>
     <div class="content">
 
-        <div class="one divColor">1</div>
-        <div class="two divColor">2</div>
-        <div class="three divColor">3</div>
-        <div class="four divColor">4</div>
-        <div class="five divColor">5</div>
+        <div class="one divColor"></div>
+        <div class="two divColor"></div>
+        <div class="three divColor"></div>
+        <div class="four divColor"></div>
+        <div class="five divColor"></div>
 
     </div>
-    
+
+    <h2>Pick Color For Mosaic</h2>
+    <div class="pickColor">
+        <div class="originalColor"></div>
+        <div class="secondColor"></div>
+        <div class="thirdColor"></div>
+        <div class="forthColor"></div>
+        <div class="fifthColor"></div>
+        <div class="sixthColor"></div>
+        <div class="seventhColor"></div>
+        <div class="eighthColor"></div>
+        <div class="ninethColor"></div>
+        <div class="tenthColor"></div>
+        <div class="eleventhColor"></div>
+        <div class="twelvethColor"></div>
+    </div>
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
